sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:5: error: not found: value getNombreValeur
  var ecart = getNombreValeur()  
              ^